# ray_tracer

./: .gitignore  Cargo.toml  rustfmt.toml
resources/: tracer.toml
src/: aabb.rs  bvh.rs  camera.rs  config.rs  hittable.rs  main.rs  material.rs  perlin.rs  ppm.rs  ray.rs  renderer.rs  texture.rs  util.rs  vec3.rs  world.rs
