[package]
name = "ray_tracer"
version = "0.1.0"
authors = ["Matt Stavola <mstavola9@gmail.com>"]
edition = "2018"

[dependencies]
toml = "0.5.1"
rayon = "1.1.0"
itertools = "0.8"
serde = "1.0.98"
serde_derive = "1.0.98"

[dependencies.rand]
version = "0.7.0"
features = ["small_rng"]

[profile.release]
debug = true